# cuipy

./: .gitignore  Benchmark.md  LICENSE  README.md  pyproject.toml
cuipy/: __init__.py  actions.py  cuiapp.py  script_reader.py
cuipy/templates/: index.html
examples/: basic_script.py
tests/: example_script.py  test_reader.py
