[tool.poetry]
name = "cuipy"
version = "0.1.0"
description = "Command User Interface for Python."
authors = ["pjpollot <pollot.pierre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
